--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/klangner/timeseries.rs"
 homepage = "https://github.com/klangner/timeseries.rs"
 documentation = "https://docs.rs/timeseries"
+readme = "README.md"
 edition = "2018"
 
 
