--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "timeseries"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Krzysztof Langner <klangner@gmail.com>"]
 description = "time Series library"
 keywords = ["timeseries"]
@@ -13,6 +13,7 @@ edition = "2018"
 
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
 ndarray = "0.13"
 chrono = "0.4"
 rand = "0.7"
